# IFCRender

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: app.cpp  wxInclude.hpp
src/config/: app_config.hpp  pannel_config.hpp
src/context/: ContextRenderer.cpp  ContextRenderer.hpp
src/controller/: OrbitController.hpp
src/core/: IContextRenderer.hpp  IOrbitController.hpp  IRenderer.hpp  IWindowEventHandler.hpp
src/core/context/: ContextRenderer.cpp  ContextRenderer.hpp  IContextRenderer.hpp  TPContextRenderer.cpp  TPContextRenderer.hpp
src/core/io/: IFCFileHandler.cpp  IFCFileHandler.hpp  IFileHandler.hpp
src/renderer/: SceneContext.hpp  THREEPPRenderer.cpp  THREEPPRenderer.hpp  TPContextRenderer.hpp
src/ui/: AppMenubar.cpp  AppMenubar.hpp  MainWindow.cpp  MainWindow.hpp  RenderCanvas.cpp  RenderCanvas.hpp  SceneView.cpp  SceneView.hpp  WindowFrame.cpp  WindowFrame.hpp
src/view/: ViewportGizmo.cpp  ViewportGizmo.hpp
